# BubbleHub

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  codecov.yml  package.json  pyproject.toml
.bubblehub-cache/: ci-models.yaml
.cursor/skills/bubblehub-release-notes/: SKILL.md
.cursor/skills/commit-last-to-pr/: SKILL.md
.github/: pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/releases/: v0.1.0.md
.github/workflows/: ci.yml  discord-notifications.yml  release.yml
ageos/: http_api.py  inference.py  native.py
ageos/app/: __init__.py  agents.py  api.py  desktop.py  models.py  telemetry.py
ageos/cli/: app.py  dashboard.py  main.py  manifest.py  ps.py  run.py  shell.py
ageos/config/: models.yaml
ageos/engine/: session.py
ageos/integrations/: anthropic_shim.py
ageos/node/: client.py
ageos/tui/: dashboard.py
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json
app/src/: main.rs
app/static/: app.js  index.html  style.css
bubblehub/: __init__.py  gpu_setup.py  http_api.py  inference.py  log.py  native.py
bubblehub/app/: __init__.py  agents.py  api.py  desktop.py  models.py  telemetry.py
bubblehub/cli/: __init__.py  app.py  dashboard.py  inference_daemon.py  interactive.py  main.py  manifest.py  poc.py  prompt.py  ps.py  queue.py  run.py  serve.py  shell.py
bubblehub/config/: __init__.py  models.yaml  sandbox.yaml  scheduler.yaml
bubblehub/engine/: __init__.py  downloader.py  registry.py  selector.py  session.py  structured.py
bubblehub/integrations/: __init__.py  anthropic_shim.py  langchain.py  openai_shim.py
bubblehub/node/: __init__.py  client.py  daemon.py  telemetry.py
bubblehub/tui/: dashboard.py
docker/: Dockerfile
docs/: libageos.md  libbubble.md  libbubblehub.md  python_layer.md  sandbox.md
examples/basic/: basic_agent.py
examples/mcp_agent/: addition.py  mcp_agent.py  simple_agent.py  web_search_tool.py
examples/openclaw/: build.sh
libageos/: access_policy.c  access_policy_test.c  ageos_sandbox_main.c  http_proxy.c  http_proxy_test.c  landlock.c  log.c  meson.build  overfs.c  sandbox.c  scheduler.c
libageos/include/ageos/: access_policy.h  http_proxy.h  overfs.h  sandbox.h  scheduler.h
libageos/tests/: access_policy_test.c  http_proxy_test.c  hw_test.c  landlock_test.c  limits_test.c  log_test.c  meson.build  overfs_test.c  sandbox_test.c  scheduler_test.c
libbubble/: access_policy.c  bubblehub_sandbox_main.c  http_proxy.c  landlock.c  limits.c  log.c  meson.build  overfs.c  scheduler.c
libbubble/include/bubblehub/: access_policy.h  http_proxy.h  limits.h  log.h  sandbox.h
libbubble/tests/: access_policy_internal_test.c  http_proxy_internal_test.c  http_proxy_test.c  hw_test.c  landlock_internal_test.c  landlock_test.c  limits_test.c  log_test.c  meson.build  overfs_internal_test.c  sandbox_internal_test.c  sandbox_test.c  scheduler_internal_test.c
libbubblehub/: http_proxy.c  hw_detect.c  meson.build  overfs.c  sandbox.c  scheduler.c
libbubblehub/include/bubblehub/: hw.h  overfs.h  scheduler.h
libbubblehub/tests/: access_policy_test.c  meson.build  overfs_test.c  scheduler_test.c  test_common.h
scripts/: build.sh  create-rootfs.sh  install-app-deps.sh  install-deps.sh  install-rust.sh  install-ui.sh  install.ps1  install.sh  package-release.sh
scripts/ci/: build-release-smoke-assets.sh  build-tauri-app.sh  prepare-openclaw.sh  run-integration-tests-coverage.sh  run-integration-tests.sh  run-lint.sh  run-linux-release-install-smoke.sh  run-unit-tests-coverage.sh  run-unit-tests.sh  run-windows-release-install-smoke.ps1  validate-release-artifacts.sh  write-ci-model-config.sh  write-coverage-summary.sh  write-windows-icon.py
tests/: conftest.py  test_app_agents.py  test_bash_cli.py  test_ci_integration.py  test_cli_small_modules.py  test_cli_wrappers_extra.py  test_control_api.py  test_control_api_edges.py  test_control_models.py  test_control_telemetry.py  test_dashboard_access_policy.py  test_dashboard_helpers.py  test_desktop_app.py  test_engine_session.py  test_gpu_setup.py  test_http_api.py  test_inference.py  test_install_ps1.py  test_integration_shims.py  test_interactive_prompt.py  test_log.py  test_manifest_cli.py  test_mcp_agent.py  test_native_inference.py  test_native_sandbox_detection.py  test_native_scheduler.py  test_native_wrappers.py  test_openai_shim.py  test_poc.py  test_prompt.py  test_ps.py  test_queue_node.py  test_registry.py  test_run.py  test_sandbox.py  test_sandbox_cli_policy.py  test_sandbox_escape.py  test_sandbox_network.py  test_scheduler.py  test_selector.py  (+2 more)
tests/fixtures/: sandbox_escape_probe.c  sandbox_escape_python.py
