[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ageos"
version = "0.1.0"
description = "AgeOS MVP CLI, sandbox, local model scheduler, and Python integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgeOS" }]
dependencies = [
  "huggingface-hub>=0.23",
  "pyyaml>=6.0",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]
examples = []
vllm = [
  "vllm>=0.5",
]
langchain = [
  "langchain-core>=0.2,<0.4",
]

[project.scripts]
ageos = "ageos.cli.main:run_cli"
ageos-node = "ageos.node.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ageos*"]

[tool.setuptools.package-data]
ageos = ["config/*.yaml"]

[tool.setuptools.data-files]
"share/ageos/libageos" = [
  "libageos/ageos_sandbox_main.c",
  "libageos/access_policy.c",
  "libageos/hw_detect.c",
  "libageos/http_proxy.c",
  "libageos/landlock.c",
  "libageos/limits.c",
  "libageos/log.c",
  "libageos/meson.build",
  "libageos/overfs.c",
  "libageos/scheduler.c",
  "libageos/sandbox.c",
  "libageos/tests/access_policy_test.c",
  "libageos/tests/http_proxy_test.c",
  "libageos/tests/hw_test.c",
  "libageos/tests/landlock_test.c",
  "libageos/tests/limits_test.c",
  "libageos/tests/log_test.c",
  "libageos/tests/meson.build",
  "libageos/tests/overfs_test.c",
  "libageos/tests/sandbox_test.c",
  "libageos/tests/scheduler_test.c",
  "libageos/tests/test_common.h",
]
"share/ageos/libageos/include/ageos" = [
  "libageos/include/ageos/access_policy.h",
  "libageos/include/ageos/hw.h",
  "libageos/include/ageos/http_proxy.h",
  "libageos/include/ageos/limits.h",
  "libageos/include/ageos/log.h",
  "libageos/include/ageos/overfs.h",
  "libageos/include/ageos/scheduler.h",
  "libageos/include/ageos/sandbox.h",
]
"share/ageos/scripts" = [
  "scripts/install-app-deps.sh",
  "scripts/install-rust.sh",
  "scripts/install-ui.sh",
  "scripts/build.sh",
  "scripts/create-rootfs.sh",
  "scripts/install.ps1",
  "scripts/install.sh",
  "scripts/install-deps.sh",
]
"share/ageos/app/static" = [
  "app/static/app.js",
  "app/static/index.html",
  "app/static/style.css",
]
"share/ageos/app" = [
  "app/Cargo.lock",
  "app/Cargo.toml",
  "app/build.rs",
  "app/rust-toolchain.toml",
  "app/tauri.conf.json",
]
"share/ageos/app/icons" = [
  "app/icons/ageos-icon.png",
  "app/icons/32x32.png",
  "app/icons/128x128.png",
  "app/icons/128x128@2x.png",
  "app/icons/icon.png",
]
"share/ageos/app/icons/models" = [
  "app/icons/models/mistral.svg",
  "app/icons/models/nvidia.svg",
  "app/icons/models/qwen.svg",
]
"share/ageos/app/src" = [
  "app/src/main.rs",
]
"share/ageos/app/capabilities" = [
  "app/capabilities/default.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
  "integration: tests that require a built AgeOS runtime and local inference backend",
]

[tool.coverage.run]
source = ["ageos"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
