[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubblehub"
version = "0.1.0"
description = "BubbleHub MVP CLI, sandbox, local model scheduler, and Python integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BubbleHub" }]
dependencies = [
  "huggingface-hub>=0.23",
  "pyyaml>=6.0",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]
examples = []
vllm = [
  "vllm>=0.5",
]
langchain = [
  "langchain-core>=0.2,<0.4",
]

[project.scripts]
bubblehub = "bubblehub.cli.main:run_cli"
bubblehub-node = "bubblehub.node.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bubblehub*"]

[tool.setuptools.package-data]
bubblehub = ["config/*.yaml"]

[tool.setuptools.data-files]
"share/bubblehub/libbubblehub" = [
  "libbubblehub/bubblehub_sandbox_main.c",
  "libbubblehub/access_policy.c",
  "libbubblehub/hw_detect.c",
  "libbubblehub/http_proxy.c",
  "libbubblehub/landlock.c",
  "libbubblehub/limits.c",
  "libbubblehub/log.c",
  "libbubblehub/meson.build",
  "libbubblehub/overfs.c",
  "libbubblehub/scheduler.c",
  "libbubblehub/sandbox.c",
  "libbubblehub/tests/access_policy_test.c",
  "libbubblehub/tests/http_proxy_test.c",
  "libbubblehub/tests/hw_test.c",
  "libbubblehub/tests/landlock_test.c",
  "libbubblehub/tests/limits_test.c",
  "libbubblehub/tests/log_test.c",
  "libbubblehub/tests/meson.build",
  "libbubblehub/tests/overfs_test.c",
  "libbubblehub/tests/sandbox_test.c",
  "libbubblehub/tests/scheduler_test.c",
  "libbubblehub/tests/test_common.h",
]
"share/bubblehub/libbubblehub/include/bubblehub" = [
  "libbubblehub/include/bubblehub/access_policy.h",
  "libbubblehub/include/bubblehub/hw.h",
  "libbubblehub/include/bubblehub/http_proxy.h",
  "libbubblehub/include/bubblehub/limits.h",
  "libbubblehub/include/bubblehub/log.h",
  "libbubblehub/include/bubblehub/overfs.h",
  "libbubblehub/include/bubblehub/scheduler.h",
  "libbubblehub/include/bubblehub/sandbox.h",
]
"share/bubblehub/scripts" = [
  "scripts/install-app-deps.sh",
  "scripts/install-rust.sh",
  "scripts/install-ui.sh",
  "scripts/build.sh",
  "scripts/create-rootfs.sh",
  "scripts/install.ps1",
  "scripts/install.sh",
  "scripts/install-deps.sh",
]
"share/bubblehub/app/static" = [
  "app/static/app.js",
  "app/static/index.html",
  "app/static/style.css",
]
"share/bubblehub/app" = [
  "app/Cargo.lock",
  "app/Cargo.toml",
  "app/build.rs",
  "app/rust-toolchain.toml",
  "app/tauri.conf.json",
]
"share/bubblehub/app/icons" = [
  "app/icons/bubblehub-icon.svg",
]
"share/bubblehub/app/icons/models" = [
  "app/icons/models/mistral.svg",
  "app/icons/models/nvidia.svg",
  "app/icons/models/qwen.svg",
]
"share/bubblehub/app/src" = [
  "app/src/main.rs",
]
"share/bubblehub/app/capabilities" = [
  "app/capabilities/default.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
  "integration: tests that require a built BubbleHub runtime and local inference backend",
]

[tool.coverage.run]
source = ["bubblehub"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
