[package]
name = "bubblehub-control-center"
version = "0.1.0"
description = "BubbleHub Control Center desktop app"
authors = ["BubbleHub"]
license = "MIT"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"
